--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-plugin-snipcartv3": "^2.3.3",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-source-strapi": "0.0.12",
     "gatsby-theme-material-ui": "^1.0.13",
@@ -26,6 +27,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-snipcart": "^0.1.6",
     "url-slug": "^2.3.2",
     "yup": "^0.29.3"
   },
